unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/PRF_EGRetail_RMU_Budget_per_unit__c.field-meta.xml
<CustomField>
    <fullName>PRF_EGRetail_RMU_Budget_per_unit__c</fullName>
    <label>RMU Budget (per unit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>