unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/PRF_Lighting__c.field-meta.xml
<CustomField>
    <fullName>PRF_Lighting__c</fullName>
    <label>Lighting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arm</fullName>
            </value>
            <value>
                <fullName>Track</fullName>
            </value>
            <value>
                <fullName>Backlit Header</fullName>
            </value>
            <value>
                <fullName>Light Box</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>