unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/PRF_Sent_to_CORE__c.field-meta.xml
<CustomField>
    <fullName>PRF_Sent_to_CORE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PRF Sent to CORE</label>
    <type>Checkbox</type>
</CustomField>