unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/PRF_Signage__c.field-meta.xml
<CustomField>
    <fullName>PRF_Signage__c</fullName>
    <label>Signage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hanging Sign</fullName>
            </value>
            <value>
                <fullName>Banner</fullName>
            </value>
            <value>
                <fullName>Vinyl</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>