unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/PRF_Submitted__c.field-meta.xml
<CustomField>
    <fullName>PRF_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PRF Submitted in SalesForce</label>
    <type>Checkbox</type>
</CustomField>