unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/PRFAdd_Design_Hours__c.field-meta.xml
<CustomField>
    <fullName>PRFAdd_Design_Hours__c</fullName>
    <inlineHelpText>Add additional hours required for Design above and beyond the standard system determined value.</inlineHelpText>
    <label>Add&#39;l Design Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>