unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/PRFAllocation_5__c.field-meta.xml
<CustomField>
    <fullName>PRFAllocation_5__c</fullName>
    <inlineHelpText>Values should add up to 100 for all 5 areas.</inlineHelpText>
    <label>Allocation 5</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>