unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/PRFAlternate_Surface__c.field-meta.xml
<CustomField>
    <fullName>PRFAlternate_Surface__c</fullName>
    <label>Alternate Surface</label>
    <length>255</length>
    <type>Text</type>
</CustomField>