unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/PRFBudget_Origin__c.field-meta.xml
<CustomField>
    <fullName>PRFBudget_Origin__c</fullName>
    <label>Budget Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Actual</fullName>
            </value>
            <value>
                <fullName>Client Estimate</fullName>
            </value>
            <value>
                <fullName>EG Estimate-Email Playback</fullName>
            </value>
            <value>
                <fullName>EG Estimate-Client Doc Playback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>