unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/PRFCornerType__c.field-meta.xml
<CustomField>
    <fullName>PRFCornerType__c</fullName>
    <label>Corner Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Left Open</fullName>
            </value>
            <value>
                <fullName>Right Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>