unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/PRFDes_Config_Other__c.field-meta.xml
<CustomField>
    <fullName>PRFDes_Config_Other__c</fullName>
    <label>Des. Config Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>