unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/PRFDesign_Type__c.field-meta.xml
<CustomField>
    <fullName>PRFDesign_Type__c</fullName>
    <label>Design Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Designer</fullName>
            </value>
            <value>
                <fullName>GEM</fullName>
            </value>
            <value>
                <fullName>Hardwall</fullName>
            </value>
            <value>
                <fullName>New Exhibit</fullName>
            </value>
            <value>
                <fullName>Reconfig Existing Only</fullName>
            </value>
            <value>
                <fullName>Reconfig Existing &amp; New</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Truss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>