unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/PRFMultimedia_Services__c.field-meta.xml
<CustomField>
    <fullName>PRFMultimedia_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multimedia Services</label>
    <type>Checkbox</type>
</CustomField>