unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/PRFOther_Info__c.field-meta.xml
<CustomField>
    <fullName>PRFOther_Info__c</fullName>
    <inlineHelpText>Select all that apply to this project.</inlineHelpText>
    <label>PRF Other Info</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ExpoServices Labor Only</fullName>
            </value>
            <value>
                <fullName>Final Load Out</fullName>
            </value>
            <value>
                <fullName>International Project</fullName>
            </value>
            <value>
                <fullName>Lease Prequal</fullName>
            </value>
            <value>
                <fullName>Metric</fullName>
            </value>
            <value>
                <fullName>Requires iCE</fullName>
            </value>
            <value>
                <fullName>RFP/RFI Response</fullName>
            </value>
            <value>
                <fullName>SDD</fullName>
            </value>
            <value>
                <fullName>Voblo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>