unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/PRFOutput_Requirements__c.field-meta.xml
<CustomField>
    <fullName>PRFOutput_Requirements__c</fullName>
    <label>Output Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Line Drawing</fullName>
            </value>
            <value>
                <fullName>3D Color Rendering</fullName>
            </value>
            <value>
                <fullName>Extract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>