unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/PRFPanel_Color__c.field-meta.xml
<CustomField>
    <fullName>PRFPanel_Color__c</fullName>
    <label>Panel Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>