unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/PRFRequest_Type__c.field-meta.xml
<CustomField>
    <fullName>PRFRequest_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Design &amp; Estimate</fullName>
            </value>
            <value>
                <fullName>Estimate Only</fullName>
            </value>
            <value>
                <fullName>Graphic Design Only &amp; Estimate</fullName>
            </value>
            <value>
                <fullName>Design Only (EG Retail use only)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>