unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/PRFShipping_Paid_By__c.field-meta.xml
<CustomField>
    <fullName>PRFShipping_Paid_By__c</fullName>
    <label>Shipping Paid By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EG/GES</fullName>
                <default>true</default>
                <label>EG/GES</label>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>