unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/PRFTech_CRM_Other__c.field-meta.xml
<CustomField>
    <fullName>PRFTech_CRM_Other__c</fullName>
    <label>Tech/CRM Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>