unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/PRFTherapeutic_Area_1__c.field-meta.xml
<CustomField>
    <fullName>PRFTherapeutic_Area_1__c</fullName>
    <label>Therapeutic Area 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>