unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Price_Increase_Percent__c.field-meta.xml
<CustomField>
    <fullName>Price_Increase_Percent__c</fullName>
    <label>Price Increase Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>