unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Prime_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Prime_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contractor producing the exhibition</inlineHelpText>
    <label>Exhibition Prime Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities Public (Prime Contractor)</relationshipLabel>
    <relationshipName>R00N40000001pl5lEAA</relationshipName>
    <type>Lookup</type>
</CustomField>