unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Prime_Contractor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Prime_Contractor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Primary sales person at contractor producing exhibition event; only use if Prime Contractor not GES</inlineHelpText>
    <label>Exhibition Prime Contractor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities Public</relationshipLabel>
    <relationshipName>R00N40000001pl5mEAA</relationshipName>
    <type>Lookup</type>
</CustomField>