unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <label>Probability %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>