unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Processed_in_CORE__c.field-meta.xml
<CustomField>
    <fullName>Processed_in_CORE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed in CORE</label>
    <type>Checkbox</type>
</CustomField>