unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Proposal_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Sent_Date__c</fullName>
    <label>Proposal Sent Date</label>
    <type>Date</type>
</CustomField>