unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/PSP__c.field-meta.xml
<CustomField>
    <fullName>PSP__c</fullName>
    <label>PSP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NM:  No - Mgmt Decision No</fullName>
            </value>
            <value>
                <fullName>NP:  NE, Lost, Sub</fullName>
            </value>
            <value>
                <fullName>PI:  Price Increase in lieu</fullName>
            </value>
            <value>
                <fullName>PM:  Unique PSP Terms</fullName>
            </value>
            <value>
                <fullName>PS:  3% PSP</fullName>
            </value>
            <value>
                <fullName>S2:  2% PSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>