unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <label>Quarter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>