unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Receive_RFP_Date__c.field-meta.xml
<CustomField>
    <fullName>Receive_RFP_Date__c</fullName>
    <inlineHelpText>Date on which exhibition sales received RFP</inlineHelpText>
    <label>RFP Received Date</label>
    <type>Date</type>
</CustomField>