unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Record_Owner_User_Location__c.field-meta.xml
<CustomField>
    <fullName>Record_Owner_User_Location__c</fullName>
    <label>Record Owner User Location</label>
    <length>240</length>
    <type>Text</type>
</CustomField>