unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>RecordType_Name__c</fullName>
    <label>Opportunity Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>