unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Related_Show_Occurrence_Public__c.field-meta.xml
<CustomField>
    <fullName>Related_Show_Occurrence_Public__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Show Occurrence Public</label>
    <referenceTo>Show_Occurrence_Public__c</referenceTo>
    <relationshipName>Show_Opportunity_Public</relationshipName>
    <type>Lookup</type>
</CustomField>