unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Review_Legal__c.field-meta.xml
<CustomField>
    <fullName>Review_Legal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Review/Legal</label>
    <type>Checkbox</type>
</CustomField>