unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/RFP_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>RFP_Due_Date__c</fullName>
    <label>Proposal Due Date</label>
    <type>Date</type>
</CustomField>