unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Sales_Location__c.field-meta.xml
<CustomField>
    <fullName>Sales_Location__c</fullName>
    <label>Sales Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>110- Las Vegas</fullName>
            </value>
            <value>
                <fullName>150- Reno</fullName>
            </value>
            <value>
                <fullName>160- Denver</fullName>
            </value>
            <value>
                <fullName>170- Phoenix</fullName>
            </value>
            <value>
                <fullName>220- Los Angeles</fullName>
            </value>
            <value>
                <fullName>240- San Francisco, San Jose</fullName>
            </value>
            <value>
                <fullName>250- San Diego</fullName>
            </value>
            <value>
                <fullName>270- Corporate Events</fullName>
            </value>
            <value>
                <fullName>420- Austin, Dallas, Houston, San Antonio</fullName>
            </value>
            <value>
                <fullName>460- Calgary, Canada</fullName>
            </value>
            <value>
                <fullName>470- Edmonton, Canada</fullName>
            </value>
            <value>
                <fullName>510- Atlanta</fullName>
            </value>
            <value>
                <fullName>520- Miami, Orlando, Tampa</fullName>
            </value>
            <value>
                <fullName>530- New Orleans</fullName>
            </value>
            <value>
                <fullName>610- Portland, Seattle</fullName>
            </value>
            <value>
                <fullName>710- Chicago, Cleveland, Milwaukee</fullName>
            </value>
            <value>
                <fullName>720- St. Louis</fullName>
            </value>
            <value>
                <fullName>790- Minneapolis</fullName>
            </value>
            <value>
                <fullName>810- New York</fullName>
            </value>
            <value>
                <fullName>830- DC, Philadelphia</fullName>
            </value>
            <value>
                <fullName>890- Toronto, Canada</fullName>
            </value>
            <value>
                <fullName>930- Washington DC Natl Sales</fullName>
            </value>
            <value>
                <fullName>940- National Sales</fullName>
            </value>
            <value>
                <fullName>140- Salt Lake City</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>