unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Primary sales person (regardless of user type)</inlineHelpText>
    <label>Sales Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities_Public</relationshipName>
    <type>Lookup</type>
</CustomField>