unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/ShippingType__c.field-meta.xml
<CustomField>
    <fullName>ShippingType__c</fullName>
    <label>Shipping Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>