unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Show_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Show_Close_Date__c</fullName>
    <label>Exhibition Close Date</label>
    <type>Date</type>
</CustomField>