unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Show_Close_Date_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Show_Close_Date_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Close Date Confirmed</label>
    <type>Checkbox</type>
</CustomField>