unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Show_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Show Name</label>
    <referenceTo>Show__c</referenceTo>
    <relationshipName>R00N40000001pl6CEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>