unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Show_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>Show_Occurrence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition Opportunity</label>
    <referenceTo>Show_Occurrence_Public__c</referenceTo>
    <relationshipLabel>Opportunities Public (Exhibition Opportunity)</relationshipLabel>
    <relationshipName>Opportunities_Public</relationshipName>
    <type>Lookup</type>
</CustomField>