unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Show_Occurrence_Name__c.field-meta.xml
<CustomField>
    <fullName>Show_Occurrence_Name__c</fullName>
    <label>Opportunity Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>