unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Show_Occurrence_Ref__c.field-meta.xml
<CustomField>
    <fullName>Show_Occurrence_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Show Occurrence Ref</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>R00N40000001ptTbEAI</relationshipName>
    <type>Lookup</type>
</CustomField>