unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Show_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Show_Open_Date__c</fullName>
    <label>Exhibition Open Date</label>
    <type>Date</type>
</CustomField>