unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/SIT_Carpet_Depot_Sq_Yd__c.field-meta.xml
<CustomField>
    <fullName>SIT_Carpet_Depot_Sq_Yd__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Carpet Depot Sq Yd</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>