unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/SIT_Carpet_Upgrades__c.field-meta.xml
<CustomField>
    <fullName>SIT_Carpet_Upgrades__c</fullName>
    <label>Carpet Upgrades</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>