unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/SIT_Electrical__c.field-meta.xml
<CustomField>
    <fullName>SIT_Electrical__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Electrical</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>