unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/SIT_Exhibitor_Count__c.field-meta.xml
<CustomField>
    <fullName>SIT_Exhibitor_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Exhibitor Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>