unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/SIT_Hanging_Signs_Rigging__c.field-meta.xml
<CustomField>
    <fullName>SIT_Hanging_Signs_Rigging__c</fullName>
    <label>Hanging Signs/Rigging</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>