unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/SIT_Intl_Logistics_In__c.field-meta.xml
<CustomField>
    <fullName>SIT_Intl_Logistics_In__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Int&#39;l Logistics In</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>