unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/SIT_Other_Modular__c.field-meta.xml
<CustomField>
    <fullName>SIT_Other_Modular__c</fullName>
    <label>Other Modular</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>