unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/SIT_Outlets_Electric__c.field-meta.xml
<CustomField>
    <fullName>SIT_Outlets_Electric__c</fullName>
    <label>Outlets - Electric</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>