unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/SIT_Showsite_Crated__c.field-meta.xml
<CustomField>
    <fullName>SIT_Showsite_Crated__c</fullName>
    <label>SIT Showsite Crated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>