unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FI</fullName>
            </value>
            <value>
                <fullName>OF</fullName>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>PS</fullName>
            </value>
            <value>
                <fullName>CR</fullName>
            </value>
            <value>
                <fullName>CV</fullName>
            </value>
            <value>
                <fullName>LO</fullName>
            </value>
            <value>
                <fullName>LR</fullName>
            </value>
            <value>
                <fullName>DB</fullName>
            </value>
            <value>
                <fullName>IA</fullName>
            </value>
            <value>
                <fullName>NE</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>SM</fullName>
            </value>
            <value>
                <fullName>TS</fullName>
            </value>
            <value>
                <fullName>SL1</fullName>
            </value>
            <value>
                <fullName>SL2</fullName>
            </value>
            <value>
                <fullName>SL3</fullName>
            </value>
            <value>
                <fullName>SL4</fullName>
            </value>
            <value>
                <fullName>LPE</fullName>
            </value>
            <value>
                <fullName>LPM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>