unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Standard_Furniture_Discount__c.field-meta.xml
<CustomField>
    <fullName>Standard_Furniture_Discount__c</fullName>
    <inlineHelpText>Contractual Standard Furniture Discount %.</inlineHelpText>
    <label>Standard Furniture Discount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>