unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Standard_Graphics_Discount__c.field-meta.xml
<CustomField>
    <fullName>Standard_Graphics_Discount__c</fullName>
    <inlineHelpText>Contractual Standard Graphics Discount.</inlineHelpText>
    <label>Standard Graphics Discount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>