unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Sub_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Sub_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Secondary contractor producing exhibition</inlineHelpText>
    <label>Exhibition Sub Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities Public (Sub Contractor)</relationshipLabel>
    <relationshipName>R00N40000001pl63EAA</relationshipName>
    <type>Lookup</type>
</CustomField>