unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Third_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Show_Opportunity_Public2</relationshipName>
    <type>Lookup</type>
</CustomField>