unpackaged/main/default/objects/Show_Occurrence_Public__c/fields/Trade_Show_200_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>Trade_Show_200_Occurrence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trade Show 200 Occurrence</label>
    <type>Checkbox</type>
</CustomField>